# Session-Builder-Mobile

./: .gitignore  AGENTS.md  README.md  flutter_rust_bridge.yaml  pubspec.yaml
android/app/: build.gradle.kts
assets/: presets.json
integration_test/: simple_test.dart
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/data/: presets_repository.dart  session_storage.dart
lib/logic/: audio_helpers.dart
lib/logic/state/: audio_controller.dart  playback_provider.dart  session_editor_provider.dart  sessions_repository_provider.dart
lib/services/: audio_handler.dart  audio_session_service.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  mobile_api.dart
lib/ui/: theme.dart
lib/ui/screens/: home_screen.dart  saved_sessions_screen.dart  session_screen.dart  step_builder_screen.dart  step_list_screen.dart
native/realtime_backend/: Cargo.toml
native/realtime_backend/src/: audio_io.rs  command.rs  frb_generated.rs  lib.rs  logging.rs  mobile_api.rs  models.rs  scheduler.rs  streaming_noise.rs  voices.rs
rust/: Cargo.toml
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_session_builder_mobile.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_session_builder_mobile.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
test/state/: playback_provider_test.dart  session_editor_provider_test.dart  sessions_repository_provider_test.dart
(+12 files in other folders)
