[package]
name = "realtime_backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "realtime_backend"
crate-type = ["cdylib", "rlib", "staticlib"]

[features]
default = []
python = ["pyo3"]
web = ["wasm-bindgen", "js-sys"]
gpu = ["wgpu", "pollster", "bytemuck"]

[dependencies]
pyo3 = { version = "0.22.0", optional = true, features = ["extension-module"] }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustfft = "6.1"
biquad = "0.4"
rand = "0.8"
rand_distr = "0.4"
crossbeam = { version = "0.8" }
ringbuf = "0.4"
parking_lot = "0.12"
once_cell = "1.19"
symphonia = { version = "0.5.4", features = ["default", "mp3"] }
getrandom = { version = "0.2", features = ["js"] }
clap = { version = "4", features = ["derive"] }
hound = "3.5.1"
wgpu = { version = "0.19", optional = true }
pollster = { version = "0.3", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }
base64 = "0.21"
toml = "0.7"
anyhow = "1.0"
lazy_static = "1.4"
flutter_rust_bridge = "=2.11.1"
log = "0.4"
backtrace = "0.3"
jni = "0.21.1"
ndk-context = "0.1.1"




[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.15.3"
ctrlc = "3"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
oboe = { version = "0.6", features = ["shared-stdcxx"] }

[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.1"

